# Clipit

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  CaptureOverlay.qml  Main.qml  README.md  SECURITY.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
components/: AnnotationLayer.qml  CaptureToolbar.qml  ColorPalette.qml  Glyph.qml  Toast.qml
docs/: architecture.md
src/app/: applicationoptions.cpp  applicationoptions.h  main.cpp  screenshotservice.cpp  screenshotservice.h
src/core/: annotation.cpp  annotation.h  annotationrenderer.cpp  annotationrenderer.h  screenshotstorage.cpp  screenshotstorage.h
src/platform/: clipboardservice.cpp  clipboardservice.h  portalscreencapturebackend.cpp  portalscreencapturebackend.h  qtscreencapturebackend.cpp  qtscreencapturebackend.h  screencapturebackend.h
tests/: tst_annotationrenderer.cpp  tst_applicationoptions.cpp  tst_screenshotservice.cpp  tst_screenshotstorage.cpp
